# lecturer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build_all_videos.sh  concat_videos.sh  docker-entrypoint.sh  generate_all_audio.sh  generate_slides.sh  lecturer.toml.example  pyproject.toml
.claude/skills/lecture-script/: SKILL.md
.claude/skills/lecture-slides/: SKILL.md
src/lecturer/: build_video.py  concat_pdf.py  config.py  generate_audio.py  pronunciation.py  transcribe.py
themes/: graph_paper.css
